SERVER-11443 Support all expressions in $redact, not just objects